--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         git clone --depth=1 https://github.com/PeterNjeim/MagiskOnWSA Projects
         cp -rf Projects/* ${{ github.workspace }}
-        cp -rf Projects/.github ${{ github.workspace }}
+        cp -rf Projects/.github/* ${{ github.workspace }}/github/
         rm -rf Projects
     - name: Update files
       uses: EndBug/add-and-commit@v9
