--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,17 +29,14 @@ jobs:
       run: |
         git clone --depth=1 https://github.com/PeterNjeim/MagiskOnWSA Projects
         cp -rf Projects/* ${{ github.workspace }}
+        cp -rf Projects/.github ${{ github.workspace }}
         rm -rf Projects
+
     - name: Update files
       uses: EndBug/add-and-commit@v9
       with:
+        token: ${{ github.token }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         default_author: github_actions
         message: 'update files'
         add: ${{ github.workspace }}/*
-    - name: 'Push changes first'
-      uses: ad-m/github-push-action@master
-      #if: steps.diff.outputs.status == 'success' && !cancelled()
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: main
-        #branch: ${{ github.ref }}
