--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
       with:
         token: ${{ github.token }}
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        default_author: github_actions
+        default_author: mymine
         message: 'update files'
         add: ${{ github.workspace }}/*
