--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,6 @@ jobs:
       uses: EndBug/add-and-commit@v9
       with:
         
-        default_author: mymine
+        default_author: github_actions
         message: 'update files'
         add: ${{ github.workspace }}/*
