--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,12 @@ jobs:
       run: |
         git clone --depth=1 https://github.com/PeterNjeim/MagiskOnWSA Projects
         cp -rf Projects/* ${{ github.workspace }}
-        cp -rf Projects/.github/workflows ${{ github.workspace }}/.github
+        cp -rf Projects/.github/workflows ${{ github.workspace }}/.github/
         rm -rf Projects
 
     - name: Update files
       uses: EndBug/add-and-commit@v9
-      with:
-        
+      with:        
         default_author: github_actions
         message: 'update files'
         add: ${{ github.workspace }}/*
