--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,11 @@ jobs:
         
     - name: Clone project
       run: |
-        git clone --depth=1 https://github.com/PeterNjeim/MagiskOnWSA Projects
-        cp -rf Projects/* ${{ github.workspace }}
-        cp -rf Projects/.github/workflows/* ${{ github.workspace }}/.github/
-        rm -rf Projects
+        #git clone --depth=1 https://github.com/PeterNjeim/MagiskOnWSA Projects
+        #cp -rf Projects/* ${{ github.workspace }}
+        #cp -rf Projects/.github/workflows/* ${{ github.workspace }}/.github/
+        #rm -rf Projects
+        echo 1 > 1.txt
 
     - name: Update files
       uses: EndBug/add-and-commit@v9
