--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -87,7 +87,7 @@ permissions:
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+        runs-on: Ubuntu-22.04
         steps:
             - name: Checkout
               uses: actions/checkout@v3
